--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
