fix: add redirect for /dashboard/admin to fix 404

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,11 @@
       "source": "/admin",
       "destination": "/admin/login",
       "permanent": false
+    },
+    {
+      "source": "/dashboard/admin",
+      "destination": "/admin/login",
+      "permanent": false
     }
   ]
 }
