--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Database Connection (Get this from MongoDB Atlas)
+MONGODB_URI=mongodb+srv://shareefnncr_db_user:2uDzXGQJTLsGyWe2@backery.xtagg09.mongodb.net/
 # Cloudinary (Get these from Cloudinary Dashboard)
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
