--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "jose": "^6.1.3",
     "lucide-react": "^0.561.0",
     "mongoose": "^9.1.0",
-    "next": "16.0.10",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "nodemailer": "^7.0.12",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "nodemailer": "^6.9.16",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/nodemailer": "^7.0.4",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.10",
+    "eslint-config-next": "^16.1.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
