--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
     "jose": "^6.1.3",
+    "lightningcss": "^1.31.1",
     "lucide-react": "^0.561.0",
     "mongoose": "^9.1.0",
     "next": "^16.1.1",
